. refer overflow  fixed

--- a/style.css
+++ b/style.css
@@ -209,8 +209,9 @@ section#ads {
 .refer a {
   text-decoration: none;
   color: rgb(51, 51, 51);
-  font-size: 19px;
+  font-size: 16px;
   padding: 25px;
+  z-index: 1;
 }
 .sideCart {
   width: 36px;
